# calendar-dongguk

./: .gitignore  Cargo.toml  LICENSE  README.md  univ.json
.github/workflows/: deploy.yml
data/: DONGGUK_2024.json  DONGGUK_2024_classified.json  DONGGUK_2025.json  DONGGUK_2025_classified.json
front/: index.html  package-lock.json  package.json  pnpm-lock.yaml
front/src/: App.css  App.tsx  Calendar.tsx  ICalendar.tsx  Subscribe.tsx  index.css  main.tsx
public/: DONGGUK_2024.ics  DONGGUK_2024.json  DONGGUK_2025.ics  DONGGUK_2025.json  DONGGUK_2025_1.ics  d_b_1.ics  d_b_7.ics
src/: main.rs
src/crawler/: classify.rs  dongguk.rs  mod.rs  univ_config.rs
src/router/: calendar.rs  mod.rs
src/schedule/: mod.rs
