[package]
name = "schedule-dongguk"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
async-trait = "0.1.83"
chrono = "0.4.39"
dotenvy = "0.15.7"
ics = "0.5.8"
reqwest = { version = "0.12.9", features = ["json"] }
scraper = "0.22.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
